--- a/highscores.html
+++ b/highscores.html
@@ -17,6 +17,7 @@
         <a href="index.html"><button>Go Back</button></a>
         <button id="clear">Clear Highscores</button>
     </div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="scores.js"></script>
 
 </body>
