changed css on highscores page

--- a/highscores.html
+++ b/highscores.html
@@ -14,8 +14,8 @@
 
 
         </ol>
-        <a href="index.html"><button>Go Back</button></a>
-        <button id="clear">Clear Highscores</button>
+        <a href="index.html"><button class="choice"> Restart </button></a>
+        <button class="choice" id="clear">Clear Highscores</button>
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="scores.js"></script>
